--- a/_posts/2022-09-07-spectember2022.md
+++ b/_posts/2022-09-07-spectember2022.md
@@ -69,7 +69,7 @@ This one has a lot of text on the card, so I'll just let you read that instead o
 
 Sapindales (pronounced sap-in-DAY-lees) is the family of plants containing citrus, lychee, mango, maple, cashew, and many others. I'm not sure why the r/SpeculativeEvolution people chose this particular family as the source of our new super-crop, but there you are.
 
-In real life, each cashew nut is encased in a shell that causes a poison-ivy-like reaction, and is attached to a small accessory fruit known as a "casheew apple" that's said to taste something like a bland peach or a crunchy plantain that makes your mouth leathery. It's commonly made into pastes and jams in South and Central America, but not widely known elsewhere.
+In real life, each cashew nut is encased in a shell that causes a poison-ivy-like reaction, and is attached to a small accessory fruit known as a "cashew apple" that's said to taste something like a bland peach or a crunchy plantain that makes your mouth leathery. It's commonly made into pastes and jams in South and Central America, but not widely known elsewhere.
 
 Whenever people advocate fruit or fruit juice as a health food, I remind them that fruits are evolutionarily supposed to be as tasty as possible, not particularly healthy. If a plant could grow a Snickers bar, it probably would.  So this is my attempt at speculatively evolving that.
 
@@ -94,3 +94,15 @@ I'm really curious to see what other people come up with for this one. Aliens? F
 As unlikely as this seems, caterpillars and lepidopterans (butterflies and moths) do a lot of very strange things when it comes to coloration, body structures, and mimicry. Some caterpillars have retractable tentacles, horns, or brushy structures that they use for defense; others are covered in toxic spines, irritating hairs, or shape-concealing fluff. Some have structures that look like convincing snake heads, and one of them is literally the [Pokémon](https://archives.bulbagarden.net/wiki/Category:Caterpie) [Caterpie](https://scontent-sjc3-1.xx.fbcdn.net/v/t1.18169-9/14141947_1207716732601609_5858353749821682547_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=973b4a&_nc_ohc=gPX5WeHn5zYAX8fksfb&_nc_ht=scontent-sjc3-1.xx&oh=00_AT_DBnNy5u3gg3jpcvHMD45cO147kuDcZ8eOb00-f-Y1Cw&oe=633F0ED1).
 
 **Aposematism** is when something dangerous or toxic has flashy colors or patterns as a warning to would-be predators. **Batesian mimicry** is when something not dangerous imitates something dangerous. **Mullerian mimicry** is when multiple dangerous things look the same as each other, so that predators only have to learn one type of pattern to stay away from (like bees and wasps with their warning-sign yellow and black stripes).
+
+### Day 12: Ghost Lineage
+
+A **ghost lineage** is when there's a gap in the fossil record for a certain species or group. They continued living during the gap, but we don't know at all what they were doing at that time, until we find their fossils again from a later time. One famous ghost lineage is coelacanths (pronounced SEE-la-kanth), a type of deep-water lobe-finned fish. There aren't any fossils of them younger than Cretaceous, so they were thought to have gone extinct alongside the non-avian dinosaurs, but then living specimens were found off the coasts of India and Africa. They were so similar to the fossils that they were instantly recognized; however, the group was already named "coelacanths" and the genus name *Coelacanthus* was already taken, so the living ones were named *Latimeria*.
+
+Anyway, you get a BOGO on this prompt: two ghost lineages for the price of one! I went with mesonychids, a family of carnivorous ungulates (relatives of horses, sheep, and whales) that lived during the Paleogene (65-30 million years ago), and taeniodonts, a family of cimolestans (early non-placental eutherians) that lived from the Cretaceous to the Eocene (74-40 million years ago). I picked those because they're both rather specialized and quite different than anything we have today.
+
+Real mesonychids never achieved true unguligrady, but rather were digitigrade with hoof-like nails. They were also paraxonic (bearing most of the weight on the two center toes), similar to sheep and pigs, but hadn't reduced their total number of toes. My modern mesonychid, given 30 million more years to refine itself, is truly unguligrade and has two toes and a dewclaw per foot. It's also further developed its dentition for its carnivorous lifestyle, with a very wolf-like set of teeth.
+
+Real taeniodonts had strong forelimbs with large claws for burrowing, and ever-growing incisors that were, unusually, derived from their canines. However, counterintuitively, they probably didn't eat roots and tubers, as wear on their teeth doesn't match that lifestyle. Instead, they probably dug burrows, but ate something else unknown. My taeniodont *does* eat roots and tubers, fulfilling its destiny.
+
+![uncat](/assets/images/posts/uncat.png)
