--- a/_posts/2022-08-24-lillis2.md
+++ b/_posts/2022-08-24-lillis2.md
@@ -99,6 +99,7 @@ Here's a table of tiny creatures that's the counterpart of the one in my [whale 
 | Deuterostome         | *Psammothuria* (sea cucumber)                | 4000        | -         |
 | Vertebrate           | *Schindleria* male (fish)                    | 6500        | 2         |
 | Tetrapod             | *Paedophryne* (frog)                         | 7000        | 10        |
+| Amniote              | *Sphaerodactylus* (gecko)                    | 14,000      | 130       |
 | Mammal               | *Batodonoides* (50-million-year-old shrew)   | ~30,000     | 1000      |
 | Living mammal        | Bumblebee bat                                | 29,000      | 2000      |
 | Dinosaur             | Bee hummingbird                              | 55,000      | 2000      |
