--- a/_posts/2022-09-07-spectember2022.md
+++ b/_posts/2022-09-07-spectember2022.md
@@ -89,6 +89,8 @@ Potoroos and bettongs are rabbit-sized bipedal marsupials native to Australia th
 
 I'm really curious to see what other people come up with for this one. Aliens? Future descendants of humans that have fewer fingers and exaggerated facial features?
 
+Edit: Someone made a hilarious ["Elmopithecus"]() ape. Why is Elmo red? Because his prey are red-green colorblind...
+
 ![berterpillar](/assets/images/posts/berterpillar.png)
 
 As unlikely as this seems, caterpillars and lepidopterans (butterflies and moths) do a lot of very strange things when it comes to coloration, body structures, and mimicry. Some caterpillars have retractable tentacles, horns, or brushy structures that they use for defense; others are covered in toxic spines, irritating hairs, or shape-concealing fluff. Some have structures that look like convincing snake heads, and one of them is literally the [Pokémon](https://archives.bulbagarden.net/wiki/Category:Caterpie) [Caterpie](https://scontent-sjc3-1.xx.fbcdn.net/v/t1.18169-9/14141947_1207716732601609_5858353749821682547_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=973b4a&_nc_ohc=gPX5WeHn5zYAX8fksfb&_nc_ht=scontent-sjc3-1.xx&oh=00_AT_DBnNy5u3gg3jpcvHMD45cO147kuDcZ8eOb00-f-Y1Cw&oe=633F0ED1).
@@ -97,7 +99,7 @@ As unlikely as this seems, caterpillars and lepidopterans (butterflies and moths
 
 ### Day 12: Ghost Lineage
 
-A **ghost lineage** is when there's a gap in the fossil record for a certain species or group. They continued living during the gap, but we don't know at all what they were doing at that time, until we find their fossils again from a later time. One famous ghost lineage is coelacanths (pronounced SEE-la-kanth), a type of deep-water lobe-finned fish. There aren't any fossils of them younger than Cretaceous, so they were thought to have gone extinct alongside the non-avian dinosaurs, but then living specimens were found off the coasts of India and Africa. They were so similar to the fossils that they were instantly recognized; however, the group was already named "coelacanths" and the genus name *Coelacanthus* was already taken, so the living ones were named *Latimeria*.
+A **ghost lineage** is when there's a gap in the fossil record for a certain species or group. They continued living during the gap, as evidenced by their surviving descendants, but we don't know at all what they were doing during that time. One famous ghost lineage is coelacanths (pronounced SEE-la-kanth), a type of deep-water lobe-finned fish. There aren't any fossils of them younger than Cretaceous, so they were thought to have gone extinct alongside the non-avian dinosaurs, but then living specimens were found off the coasts of India and Africa. They were so similar to the fossils that they were instantly recognized; however, the group was already named "coelacanths" and the genus name *Coelacanthus* was already taken, so the living ones were named *Latimeria*.
 
 Anyway, you get a BOGO on this prompt: two ghost lineages for the price of one! I went with mesonychids, a family of carnivorous ungulates (relatives of horses, sheep, and whales) that lived during the Paleogene (65-30 million years ago), and taeniodonts, a family of cimolestans (early non-placental eutherians) that lived from the Cretaceous to the Eocene (74-40 million years ago). I picked those because they're both rather specialized and quite different than anything we have today.
 
@@ -106,3 +108,65 @@ Real mesonychids never achieved true unguligrady, but rather were digitigrade wi
 Real taeniodonts had strong forelimbs with large claws for burrowing, and ever-growing incisors that were, unusually, derived from their canines. However, counterintuitively, they probably didn't eat roots and tubers, as wear on their teeth doesn't match that lifestyle. Instead, they probably dug burrows, but ate something else unknown. My taeniodont *does* eat roots and tubers, fulfilling its destiny.
 
 ![uncat](/assets/images/posts/uncat.png)
+
+### Day 14: Herbilingua
+
+The scientific name for the anteater family is Vermilingua, or "worm tongue", referring to the fact that their tongue looks like a worm, not that they eat worms (they eat ants...obviously). So the moniker "Herbilingua" isn't quite right for an herbivorous anteater; if I were following the title, I should evolve an anteater with a leaf-shaped tongue. But enough pedantry, let's get to the actual content.
+
+While the giant, terrestrial anteater is probably the most well-known, other anteaters, including the tamandua and the silky anteater, are arboreal and have very sloth-like claws. (This makes sense, as sloths are anteaters' closest living relatives.) Since they're already arboreal, small, and equipped with claws used for tearing wood to get at insects, it's not too much of a stretch to imagine them supplementing their diet with some tree sap they incidentally dig up, and then relying on it more and more over time. And why not throw in a gliding membrane? That's always a useful thing to have for an active, arboreal lifestyle. And...I've just created another version of a sapsucker (bird) or sugar glider (marsupial). At least it's plausible!
+
+![sapeater](/assets/images/posts/sapeater.png)
+
+### Day 15: Endangered Enigmatic
+
+Mountain animals escaping global warming by living at higher elevations is already happening; what if it happened on the highest peaks in the world?
+
+These are the descendants of the markhor and the red agama, two animals that currently live at medium elevations in the Himalayas.  The markhor is an impressively statuesque type of mountain goat that's a **stenocline**, an animal that is adapted specifically for one elevation, rather than a **eurycline** (such as a vicuña, an Andean alpaca relative) which would tolerate a variety of elevations. If the climate change is slow enough, the elevation the goat is adapted to could match pace with the changing temperatures, and it could end up very high up indeed.
+
+Lizards don't live where it's too cold, since they rely on ambient temperatures to warm them enough for their body's chemical reactions to function. However, if global warming made elevations not so snowy, the main problem left to confront is lack of oxygen, which is actually something ectotherms (cold-blooded creatures) do better than endotherms (warm-blooded ones). Perhaps alongside the mountain agama, there are lots of other lizards populating the balmy slopes of Everest.
+
+![screwhorn](/assets/images/posts/screwhorn.png)
+
+### Day 17: Natural Wonders
+
+Glass sponges are a type of sponge (asymmetric, filter-feeding animals) that support their flesh using little bone-like structures known as **spicules** (small spikes) made of silica (literally glass). Viewed under a microscope, they're shaped like little caltrops, dumbbells, and other strange and exotic shapes. However, most are too small to be seen with the naked eye.
+
+Enter the Giant Basal Spicule sponge, *Monorhaphis*. This real, extant, non-speculative animal creates a looooong, thin, pole-shaped spicule (shouldn't we just call it a spike at this point? There's nothing -ule about it) that holds the animal far above the sediment, to improve its filter-feeding efficacy. Filter feed too close to the seafloor and you get clogged with mud; a little higher and you're competing with lots of other filter-feeders. The GBS (as it's known in scientific papers) is the sponge's equivalent to a tree's trunk, raising its important bits above the competition.
+
+In the past, glass sponge spicules piled up and formed reefs (one of many non-coral reef-builders from prehistory), but in the modern day corals dominate in structure-building duties. Here's where my tiny bit of speculation comes in. Por que no los dos? Giant spicule reefs! It would be like enormous aquatic pickup sticks.
+
+Interestingly, silica is a lot less plentiful in the environment than calcium carbonate (seashell material) or calcium phosphate (bone). So GBS sponges grow really, really slowly and can live tens of thousands of years.
+
+![spicule](/assets/images/posts/spicule.png)
+
+### Day 18: Bonanza
+
+This one is a reference to an unsubstantiated but famous theory known as "the aquatic ape hypothesis". The hypothesis was that perhaps the reason humans are hairless and upright-standing is because our ancestors were semiaquatic apes?
+
+No evidence at all supports this, and I've written a little bit about why we did lose our hair in a [previous post](). (I've also written about why apes can't swim in a [different post]().) However, what might an aquatic ape actually look like?
+
+![thalassogorilla](/assets/images/posts/thalassogorilla.png)
+
+Apparently like green Donkey Kong... (It's green because its fur is full of algae, like a sloth. The algae don't help or harm the ape other than camouflage.)
+
+### Day 19: Flight School
+
+I'm happy with how this turned out, but there's no way I was going to do something better than Osmatar's [Sharovipterosaurs](https://www.deviantart.com/osmatar/art/Sharovipterosaurs-860993563).
+
+Anyway, for this prompt I didn't want to do any mammals or ornithodirans, since those are over-represented in real life. Nor did I want to do a new kind of flying bug, since I'm not familiar enough with inverts to do a good job. I considered flying frogs or snakes since there's already a gliding version (gliding frogs use their big webbed feet like little parachutes, and gliding snakes make their body into the cross-section of a Frisbee), but ended up settling on flying fish. While "flying" (gliding) fish today are from the order Beloniformes and don't breathe air, there have been gliding fish found in the fossil record from an unrelated family, the extinct Triassic Thoracopteridae, indicating that fish gliding isn't too hard to evolve. Therefore, I've picked a third group of fish to be my powered fliers--the blennies, a type of semi-terrestrial fish that already has a lot of the traits needed to make a good aerialist. They can jump using their tails, support their weight on their pectoral fins, and, most importantly, breathe air (as long as their skin is moist).
+
+![blenny](/assets/images/posts/blenny.png)
+
+### Day 20: Inner World
+
+Whew, four days in a row. I'm falling behind!
+
+As I mentioned a [couple posts ago](https://obscuredinosaurfacts.com/post/2022/08/24/lillis2.html), the smallest known tetrapod is a teeny tiny frog called *Paedophryne*, which is about 7mm long and lives among leaf litter. It's less than a tenth of the mass of the smallest known amniote, a tiny gecko called *Sphaerodactylus*, which indicates that amphibians are just able to achieve smaller sizes than amniotes, though I'm not sure why. I don't know too much about parasites, so let me know if this doesn't make any sense. "Cestoides" means "belt-like", in reference to Cestoda, the scientific name for tapeworms.
+
+![endophryne](/assets/images/posts/endophryne.png)
+
+After I posted this on Reddit, people asked some good questions, so I'll also answer them here.
+
+How does it breathe? -- I honestly didn't think about this, but since it already sucks blood I'm going to say that it absorbs oxygen through the skin of its mouth and face while it does that. Many frogs already breathe through their skin, and these frogs would not have very high oxygen requirements because they don't move around very much.
+
+Why not just stay a tadpole? Then it would be better able to swim in the digestive tract. -- That is a good point. Some amphibians have **neotenic** development, like the axolotl, which stay in their tadpole phase their whole lives. However, the ancestor I chose, *Paedophryne*, already doesn't have a tadpole stage, so it would be one more thing to change. And, since the prompt is "an endoparasitic tetrapod", the four-legged frog shape fits the bill a bit better than a fishlike tadpole. Neotenic development seems easy for amphibians to evolve though, so maybe it does make more sense here.
