--- a/_posts/2020-09-23-dinophoto2.md
+++ b/_posts/2020-09-23-dinophoto2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dinosaur Photography 2"
+title:  "Dinosaur Photography 2: Mountain Birds of California"
 tags: [Photography, Dinosauria]
 date:   2020-09-23 00:02:08 -0700
 categories: blog post
