--- a/_posts/2020-12-16-dinophoto4.md
+++ b/_posts/2020-12-16-dinophoto4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dinosaur Photography 4"
+title:  "Dinosaur Photography 4: More California Waterbirds"
 tags: [Photography, Dinosauria]
 date:   2020-12-16 00:02:08 -0700
 categories: blog post
