--- a/_posts/2021-02-10-dinophoto5.md
+++ b/_posts/2021-02-10-dinophoto5.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dinosaur Photography 5"
+title:  "Dinosaur Photography 5: Landbirds of California"
 tags: [Photography, Dinosauria]
 date:   2021-02-10 00:00:08 -0700
 categories: blog post
