--- a/_posts/2021-06-16-dinophoto6.md
+++ b/_posts/2021-06-16-dinophoto6.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dinosaur Photography 6: East Coast Birds"
+title:  "Dinosaur Photography 6: New York Birds"
 tags: [Photography, Dinosauria]
 date:   2021-06-02 00:05:08 -0700
 categories: blog post
