--- a/_posts/2022-07-27-dinophoto8.md
+++ b/_posts/2022-07-27-dinophoto8.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dinosaur Photography 8"
+title:  "Dinosaur Photography 8: Boston Birds"
 tags: [Photography, Dinosauria]
 date:   2022-07-27 09:23:08 -0700
 categories: post
