--- a/_posts/2022-09-07-spectember2022.md
+++ b/_posts/2022-09-07-spectember2022.md
@@ -99,7 +99,7 @@ As unlikely as this seems, caterpillars and lepidopterans (butterflies and moths
 
 ### Day 12: Ghost Lineage
 
-A **ghost lineage** is when there's a gap in the fossil record for a certain species or group. They continued living during the gap, as evidenced by their surviving descendants, but we don't know at all what they were doing during that time. One famous ghost lineage is coelacanths (pronounced SEE-la-kanth), a type of deep-water lobe-finned fish. There aren't any fossils of them younger than Cretaceous, so they were thought to have gone extinct alongside the non-avian dinosaurs, but then living specimens were found off the coasts of India and Africa. They were so similar to the fossils that they were instantly recognized; however, the group was already named "coelacanths" and the genus name *Coelacanthus* was already taken, so the living ones were named *Latimeria*.
+A **ghost lineage** is when a certain species or group disappears from the fossil record for a time, then reappears later. They continued living during the gap, as evidenced by their surviving descendants, but we don't know at all what they were doing during that time. One famous ghost lineage is coelacanths (pronounced SEE-la-kanth), a type of deep-water lobe-finned fish. There aren't any fossils of them younger than Cretaceous, so they were thought to have gone extinct alongside the non-avian dinosaurs, but then living specimens were found off the coasts of India and Africa. They were so similar to the fossils that they were instantly recognized; however, the group was already named "coelacanths" and the genus name *Coelacanthus* was already taken, so the living ones were named *Latimeria*.
 
 Anyway, you get a BOGO on this prompt: two ghost lineages for the price of one! I went with mesonychids, a family of carnivorous ungulates (relatives of horses, sheep, and whales) that lived during the Paleogene (65-30 million years ago), and taeniodonts, a family of cimolestans (early non-placental eutherians) that lived from the Cretaceous to the Eocene (74-40 million years ago). I picked those because they're both rather specialized and quite different than anything we have today.
 
@@ -167,6 +167,26 @@ As I mentioned a [couple posts ago](https://obscuredinosaurfacts.com/post/2022/0
 
 After I posted this on Reddit, people asked some good questions, so I'll also answer them here.
 
-How does it breathe? -- I honestly didn't think about this, but since it already sucks blood I'm going to say that it absorbs oxygen through the skin of its mouth and face while it does that. Many frogs already breathe through their skin, and these frogs would not have very high oxygen requirements because they don't move around very much.
+*How does it breathe?* -- I honestly didn't think about this, but since it already sucks blood I'm going to say that it absorbs oxygen through the skin of its mouth and face while it does that. Many frogs already breathe through their skin, and these frogs would not have very high oxygen requirements because they don't move around very much.
 
-Why not just stay a tadpole? Then it would be better able to swim in the digestive tract. -- That is a good point. Some amphibians have **neotenic** development, like the axolotl, which stay in their tadpole phase their whole lives. However, the ancestor I chose, *Paedophryne*, already doesn't have a tadpole stage, so it would be one more thing to change. And, since the prompt is "an endoparasitic tetrapod", the four-legged frog shape fits the bill a bit better than a fishlike tadpole. Neotenic development seems easy for amphibians to evolve though, so maybe it does make more sense here.
+*Why not just stay a tadpole? Then it would be better able to swim in the digestive tract.* -- That is a good point. Some amphibians have **neotenic** development, like the axolotl, which stay in their tadpole phase their whole lives. However, the ancestor I chose, *Paedophryne*, already doesn't have a tadpole stage, so it would be one more thing to change. And, since the prompt is "an endoparasitic tetrapod", the four-legged frog shape fits the bill a bit better than a fishlike tadpole. Neotenic development seems easy for amphibians to evolve though, so maybe it does make more sense here.
+
+### Day 22: No More Tentacles
+
+The vampire squid is a deep-ocean cephalopod that's more closely related to octopuses than to squid, but isn't particularly close to octopuses either. It has weird, super-long filaments it uses to snag marine snow (tiny bits of sinking detritus) and tentacles partly connected by a "cape" of webbing that it uses to grab soft-bodied prey like jellyfish and [salps](https://en.wikipedia.org/wiki/Salp). It also has enormous eyes for seeing in the dark, and bioluminescent patches on the tip of its mantle and on the tips of its tentacles, as well as the "glitter bomb" glowing mucus attack it uses instead of ink.
+
+My vampire squid descendant is convergent with jellyfish, having become slower and more passive over time to save energy.
+
+![aegiroteuthis](/assets/images/posts/aegiroteuthis.png)
+
+### Finale: Mythical Megafauna
+
+The last entry in Spectember is a special, high-effort one that will be judged in a contest. Here's the prompt:
+
+![mythical-megafauna](/assets/images/posts/mythical-megafauna.webp)
+
+Five insets in addition to the main depiction of the animal sure was a lot! Here's what I ended up with.
+
+{% include image-caption.html imageurl="/assets/images/posts/sphinx-treehopper.png#wide" title="Sphinx Treehopper"%}
+
+The contest will be judged after a week of user engagement on Reddit, so if you want to ask me a question or throw me an upvote head over [there](https://www.reddit.com/r/SpeculativeEvolution/comments/xr1way/spectember_finale_mythical_megafauna/) before October 7 at 00:00 UTC (October 6 at 5pm PDT). I'll let you know if I win :)
