--- a/_posts/2022-09-21-ghosts.md
+++ b/_posts/2022-09-21-ghosts.md
@@ -12,7 +12,7 @@ hidden: true
 
 I was already planning on doing a post on ghost lineages when fortuitously, it came up as a prompt in [Spectember](https://obscuredinosaurfacts.com/post/2022/09/07/spectember2022.html). So to start, I'll just quote myself here:
 
-``` A ghost lineage is when there's a gap in the fossil record for a certain species or group. They continued living during the gap, as evidenced by their surviving descendants, but we don't know at all what they were doing during that time. ```
+``` A ghost lineage is when a certain species or group disappears from the fossil record for a time, then reappears later. They continued living during the gap, as evidenced by their surviving descendants, but we don't know at all what they were doing during that time. ```
 
 This post will essentially just be a list of a few particularly interesting or egregious cases of ghost lineages in the fossil record. For a more detailed explanation of what a ghost lineage is, check out this [short article](https://ucmp.berkeley.edu/taxa/verts/archosaurs/ghost_lineages.php). I won't mention the archetypal example, coelacanths, in this post, because of how well that article describes them.
 
@@ -34,7 +34,7 @@ Herbivorous dinosaurs mostly came from two groups: Thyreophora, the armored dino
 
 ![scelidosaurus](/assets/images/posts/scelidosaurus.gif)
 
-The new naming of the much younger *Jakapil* increases the known diversity of basal thyreophorans by a third and creates an **84 million year ghost lineage**. That is, assuming it is truly a basal thyreophoran. *Jakapil* has several characteristics in common with other thyreophorans, especially *Scelidosaurus*, including skull, rib, and limb features, as well as telltale **osteoderms** (bony armor growing in the skin). However, it also shares features with heterodontosaurs (a very primitive branch of herbivorous dinosaurs) and ceratopsians (horn-faced dinosaurs), such as a **predentary bone** (an extra bone at the tip of the jaw) that supported a beak, and a chewing style better suited for mashing tough vegetation rather than selectively browsing. However, it's definitely possible that those features are **convergent**, if *Jakapil* evolved them in response to shifting its diet toward tougher foods.
+The new naming of the much younger *Jakapil* increases the known diversity of basal thyreophorans by a third and creates an **84 million year ghost lineage**. That is, assuming it is truly a basal thyreophoran. *Jakapil* has several characteristics in common with other thyreophorans, especially *Scelidosaurus*, including skull, rib, and limb features, as well as telltale **osteoderms** (bony armor growing in the skin). However, it also shares features with heterodontosaurs (a very primitive branch of herbivorous dinosaurs) and ceratopsians (horn-faced dinosaurs), such as a **predentary bone** (an extra bone at the tip of the jaw) that supported a beak, and a chewing style better suited for mashing tough vegetation than selectively browsing. However, it's definitely possible that those features are **convergent**, if *Jakapil* evolved them in response to shifting its diet toward tougher foods.
 
 ![jakapil2](/assets/images/posts/jakapil2.jpg)
 
