--- a/_posts/2020-10-28-dinophoto3.md
+++ b/_posts/2020-10-28-dinophoto3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dinosaur Photography 3"
+title:  "Dinosaur Photography 3: Waterbirds of California"
 tags: [Photography, Dinosauria]
 date:   2020-10-28 00:02:08 -0700
 categories: blog post
