--- a/_posts/2022-04-06-dinophoto7.md
+++ b/_posts/2022-04-06-dinophoto7.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dinosaur Photography 7"
+title:  "Dinosaur Photography 7: Denver Birds"
 tags: [Photography, Dinosauria]
 date:   2022-04-13 09:23:08 -0700
 categories: post
