added a couple photos

--- a/_posts/2022-09-07-spectember2022.md
+++ b/_posts/2022-09-07-spectember2022.md
@@ -15,7 +15,7 @@ If you've hung around this blog for awhile, you may have seen my participation i
 Here are Spectember's prompts:
 ![spectember](/assets/images/posts/spectember2022.png)
 
-I'm going to do most of them, but not all--some of the prompts that reference outdated concepts or just don't spark inspiration for me, I'm going to skip. Also, September is just beginning, so I haven't finished all the entries yet. Check back later to see more!
+I'm going to do most of them, but not all--some of the prompts that reference outdated concepts or just don't spark inspiration for me, I'm going to skip. If you haven't been back to this post in awhile, Spectember is now complete, so scroll to the bottom to see new art!
 
 Before we get started, here are some cartoons I made featuring a very famous speculative evolution creature: "dinosauroids", the intelligent species that results if the asteroid had not wiped out non-avian dinosaurs. They're descendants of a "raptor" dinosaur, or possibly even an early bird, which were the smartest animals at the end of the Mesozoic.
 
