--- a/_posts/2022-10-05-dinophoto9.md
+++ b/_posts/2022-10-05-dinophoto9.md
@@ -64,6 +64,10 @@ This one is a juvenile, who hasn't developed any red on its head yet. I also spo
 
 There were quite a few trees that had been knocked down by Hurricane Andrew back in 1992, but survived since some of the roots remained rooted. The trees were putting out new growth from all over, and other plants were growing in the dirt stuck to the roots.
 
+![longpine](/assets/images/posts/longpine.png)
+
+These are the "long pines", an unexpected biome that just looked like this in all directions, totally flat. It was home to a lot of woodpeckers and gnatcatchers. It was cool, but it wasn't such a good place for hiking, as it was flat, muddy, and uniform for miles.
+
 ### Birds on the Beach
 
 I took these photos on the beach at Virginia Key, the closest key to Miami.
@@ -102,7 +106,7 @@ This gull found a discarded shish kebab, and was being chased by grackles, crows
 
 ![fish](/assets/images/posts/fish-2.jpg)
 
-Some of the fish crows I saw were indistinguishable in appearance from the American crows common everywhere else in the US. But their voices were very distinctie, going "keh" instead of "caw".
+Some of the fish crows I saw were indistinguishable in appearance from the American crows common everywhere else in the US. But their voices were very distinctive, going "keh" instead of "caw".
 
 ![fish2](/assets/images/posts/fish-3.jpg)
 
@@ -142,7 +146,7 @@ These are some brown pelicans. We have those in California.
 
 ![dove](/assets/images/posts/dove-1.jpg)
 
-This is just a mourning dove, looking very annoyed. We have mourning doves in California too.
+This is a mourning dove, looking very annoyed. We have mourning doves in California too.
 
 ### Birds at the Park
 
@@ -258,7 +262,7 @@ In addition to its exciting bird population, Florida is also known for its non-a
 
 ![turtle-1](/assets/images/posts/softshell.jpg)
 
-This is a Florida softshell turtle. It's hard to tell from this angle, but these have a very strange snorkel-like snoot. They are also very fast-moving for a turtle.
+This is a Florida softshell turtle I saw in the Everglades. It's hard to tell from this angle, but these have a very strange snorkel-like snoot. They are also very fast-moving for a turtle.
 
 ![turtle-2](/assets/images/posts/yellow-bellied.jpg)
 
@@ -288,6 +292,14 @@ This unassuming tiny guy is a brown anole, a highly disruptive invasive species.
 
 This is a yellow ratsnake, which is the same species as the eastern ratsnake found commonly in the eastern half of the United States, but everywhere outside of Florida it's black. Ratsnakes are constrictors, and are not venomous, so a lot of herpetology nerds adore them. On Reddit, whenever someone posts a picture of a ratsnake, it's traditional to start singing about ratsnakes to the tune of "That's Amore" ([example](https://www.reddit.com/r/snakes/comments/wha33l/this_guy_scared_the_shit_out_of_us_can_help/)).
 
+![gator1](/assets/images/posts/gator-1.jpg)
+
+These baby American alligators were also at the museum. It was hard to get pictures of them because they were behind a warped plastic wall.
+
+![gator2](/assets/images/posts/gator-2.jpg)
+
+The American Southeast is the only place in the world where you have to tell the differnce between crocs and alligators. Nowhere else do their ranges overlap.
+
 ![spider](/assets/images/posts/spider.jpg)
 
 This is a golden silk orb-weaver couple. The female is the large (hand-sized!) colorful one. Can you spot the male? Unlike many closely related species, this female won't eat her mate.
@@ -315,3 +327,11 @@ This is a Florida strangler fig just beginning to climb up a palm tree. Strangle
 ![squirrel](/assets/images/posts/squirrel-nuts.jpg)
 
 This is a squirrel with the largest testicle to body size ratio I've ever seen. How can it climb vertical trees? Doesn't its giant nutsack get in the way?
+
+![cooper](/assets/images/posts/cooper-grasping.png)
+
+And lastly, a bonus--I recently got a cockatiel named Cooper! Here he is grasping a favorite toy. He's not so good at grasping things with his feet yet.
+
+![cooper](/assets/images/posts/cooper-birdwatching.png)
+
+Here's Cooper birdwatching. He is very interested in crows, gulls, and planes that go by outside our window.
